[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
serde = {version = "1.0", features = ["derive"]}
oqs-sys = { version = "0.9" }
oqs = { version = "0.9", features = ["serde"] }
